---
source: crates/pgls_pretty_print/tests/tests.rs
input_file: crates/pgls_pretty_print/tests/data/multi/select_distinct_on_60.sql
snapshot_kind: text
---
SELECT DISTINCT ON (
  string4)
  string4,
  two,
  ten
FROM
  onek
ORDER BY string4 USING <,
  two USING >,
  ten USING <;

SELECT DISTINCT ON (
  string4,
  ten)
  string4,
  two,
  ten
FROM
  onek
ORDER BY string4 USING <,
  two USING <,
  ten USING <;

SELECT DISTINCT ON (
  string4,
  ten)
  string4,
  ten,
  two
FROM
  onek
ORDER BY string4 USING <,
  ten USING >,
  two USING <;

SELECT DISTINCT ON (
  1)
  floor(random()) AS r,
  f1
FROM
  int4_tbl
ORDER BY 1,
  2;

SELECT DISTINCT ON (
  four)
  four,
  two
FROM
  tenk1
WHERE
  four =
  0
ORDER BY 1;

SELECT DISTINCT ON (
  four)
  four,
  two
FROM
  tenk1
WHERE
  four =
  0
ORDER BY 1;

SELECT DISTINCT ON (
  four)
  four,
  two
FROM
  tenk1
WHERE
  four =
  0
ORDER BY 1,
  2;

SELECT DISTINCT ON (
  four)
  four,
  hundred
FROM
  tenk1
WHERE
  four =
  0
ORDER BY 1,
  2;

CREATE TABLE distinct_on_tbl ( x INT, y INT, z INT );

INSERT INTO distinct_on_tbl
SELECT
  i % 10,
  i % 10,
  i % 10
FROM
  generate_series(1,
  1000) AS i;

CREATE INDEX "distinct_on_tbl_x_y_idx" ON distinct_on_tbl USING btree
(
  x,
  y
);

ANALYZE distinct_on_tbl;

SET enable_hashagg = off;

SELECT DISTINCT ON ( y, x) x, y FROM distinct_on_tbl;

SELECT DISTINCT ON ( y, x) x, y FROM distinct_on_tbl;

SELECT DISTINCT ON (
  y,
  x)
  x,
  y
FROM
  (SELECT
    *
  FROM
    distinct_on_tbl
  ORDER BY x) AS s;

SELECT DISTINCT ON (
  y,
  x)
  x,
  y
FROM
  (SELECT
    *
  FROM
    distinct_on_tbl
  ORDER BY x) AS s;

SELECT DISTINCT ON (
  y,
  x)
  x,
  y
FROM
  distinct_on_tbl
ORDER BY y;

SELECT DISTINCT ON (
  y,
  x)
  x,
  y
FROM
  distinct_on_tbl
ORDER BY y;

SELECT DISTINCT ON (
  y,
  x)
  x,
  y
FROM
  (SELECT
    *
  FROM
    distinct_on_tbl
  ORDER BY x,
    z,
    y) AS s
ORDER BY y,
  x,
  z;

SELECT DISTINCT ON (
  y,
  x)
  x,
  y
FROM
  (SELECT
    *
  FROM
    distinct_on_tbl
  ORDER BY x,
    z,
    y) AS s
ORDER BY y,
  x,
  z;

RESET enable_hashagg;

DROP TABLE "distinct_on_tbl";
